# aina-code-training-pipeline

./: .gitignore  README.md  pyproject.toml  setup.sh
aina_train/: chat.py  checkpoint.py  cli.py  config.py  data.py  hf_model.py  tokenizer.py  trainer.py  upload_s3.py
configs/: aina_code_3m_1k_pretrain.yaml  aina_code_3m_1k_sft.yaml  aina_code_500m_8k_pretrain.yaml  aina_code_500m_8k_sft.yaml  aina_code_50m_2k_pretrain.yaml  aina_code_50m_2k_sft.yaml  aina_code_pretrain_3m_local.yaml  aina_code_pretrain_500m_server.yaml  aina_code_pretrain_50m_server.yaml  aina_code_sft_3m_local.yaml  aina_code_sft_500m_server.yaml  aina_code_sft_50m_server.yaml
scripts/: train.py
tests/: test_chat_inference.py  test_config_cli.py  test_data.py  test_s3_dataset.py  test_training_smoke.py
