[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aina-train"
version = "0.1.0"
description = "Training pipeline for Aina Code models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "transformers>=4.41",
]

[project.optional-dependencies]
server = [
  "torch>=2.2",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
aina-train = "aina_train.cli:main"

[tool.setuptools.packages.find]
include = ["aina_train*"]
